--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src/**/*.{js,jsx}",
@@ -61,6 +63,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.2",
+    "gh-pages": "^2.2.0",
     "husky": "^4.2.5",
     "json-server": "^0.16.1",
     "lint-staged": "^10.2.2",
@@ -73,7 +76,8 @@
     }
   },
   "lint-staged": {
-    "*.js": "npm run lint:fix"
+    "*.js": "npm run format"
   },
-  "proxy": "https://gateway.marvel.com/v1/public/"
+  "proxy": "https://gateway.marvel.com/v1/public/",
+  "homepage": "http://evertonthepaula.github.io/marvelact"
 }
